--- a/TG2/app/src/main/res/layout/activity_medicamentos.xml
+++ b/TG2/app/src/main/res/layout/activity_medicamentos.xml
@@ -40,4 +40,20 @@
         app:layout_constraintTop_toBottomOf="@+id/imageButton2"
         tools:layout_editor_absoluteX="0dp" />
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="93dp"
+        android:layout_height="88dp"
+        app:srcCompat="@drawable/pill"
+        tools:layout_editor_absoluteX="27dp"
+        tools:layout_editor_absoluteY="147dp" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        tools:layout_editor_absoluteX="38dp"
+        tools:layout_editor_absoluteY="102dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
