--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -26,7 +26,7 @@
         android:layout_height="73dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:scaleX="2"
+        android:scaleType="fitXY"
         android:scaleY="2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
