Adicionei um porradão de coisas. Verifica tudo, vê se gostas do funcionamento, amanhã logo revejo e tento melhorar/otimizar. A app já está praticamente "funcional", em termos da navegação. Agora é introduzir as funcionalidades projetadas para o Adicionar_Medicamentos/Medicamentos. Depois é a página principal. Lê os TODOs todos, e à frente deles mete um visto, para eu saber que viste.
Bora ter 20 nesta merda caralho!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!

Signed-off-by: GitGilDev <henriquegildev@gmail.com>

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -66,6 +66,7 @@
         android:layout_marginTop="16dp"
         android:scaleX="2"
         android:scaleY="2"
+        android:contentDescription="@string/logoDescription"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/easymed" />
@@ -80,6 +81,7 @@
         android:backgroundTint="@null"
         android:hapticFeedbackEnabled="false"
         android:scaleType="fitXY"
+        android:contentDescription="@string/menuButtonDesc"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/menu" />
@@ -118,4 +120,34 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/divider11" />
+
+    <View
+        android:id="@+id/view4"
+        android:layout_width="383dp"
+        android:layout_height="109dp"
+        android:layout_marginTop="12dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider9" />
+
+    <View
+        android:id="@+id/view5"
+        android:layout_width="383dp"
+        android:layout_height="109dp"
+        app:layout_constraintBottom_toTopOf="@+id/divider11"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider10" />
+
+    <View
+        android:id="@+id/view6"
+        android:layout_width="383dp"
+        android:layout_height="109dp"
+        android:layout_marginTop="4dp"
+        app:layout_constraintBottom_toTopOf="@+id/divider12"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/divider11"
+        app:layout_constraintVertical_bias="0.533" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
